# BruDLX

./: .merlin  Readme.md  brudlx2.opam  dune-project
examples/: sudoku.ml  triangles.ml
lib/: dlx.c  dlx.ml  dlx.mli  dune
test/: a.out  dune  test  test_brudlx.cmi  test_brudlx.cmx  test_brudlx.ml
