(lang dune 3.6)

(name brudlx2)

(generate_opam_files true)

(source
 (github profb/brudlx))

(authors "Author Name")

; (maintainers "Maintainer Name")

; (license LICENSE)

; (documentation https://url/to/documentation)

(package
 (name brudlx2)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 ; (tags
 ;  (topics "to describe" your project))
)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
